AER3-345 dataset year information (#10)
* Added metadata to a dataset in database

* Added api call to get dataset information that can contain metadata
